修改小程序，更改主页面

--- a/project.config.json
+++ b/project.config.json
@@ -5,14 +5,14 @@
 	},
 	"setting": {
 		"urlCheck": true,
-		"es6": true,
+		"es6": false,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
 		"nodeModules": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.0.4",
+	"libVersion": "2.3.0",
 	"appid": "wxd11fd0106e03a756",
 	"projectname": "Community-applet",
 	"debugOptions": {
