改造不需要部分，新建了页面

--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
     "pages" :[
-        "pages/index/index",
-        "pages/map/map"
+        "pages/index/index"
     ],
     "window" : {
         "navigationBarBackgroundColor":"#4e8a63",
