创建个人子页面

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
     "pages" :[
-        "pages/index/index"
+        "pages/index/index",
+        "pages/person/person"
     ],
     "window" : {
         "navigationBarBackgroundColor":"#4e8a63",
