添加新的需求和添加建筑群图标样品

--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
     "pages" :[
         "pages/index/index",
-        "pages/map/map"
+        "pages/map/map",
+        "pages/color/color"
     ],
     "window" : {
         "navigationBarBackgroundColor":"#4e8a63",
